Prevent autozoom on ios

--- a/static/styles.css
+++ b/static/styles.css
@@ -176,6 +176,10 @@ code {
   .stream_duration_container {
     text-align: center;
   }
+
+  input {
+    font-size: 16px;
+  }
 }
 
 @media only screen and (min-width: 721px) {
